<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!-- -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/black"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/data"
            android:textSize="20dp"
            android:textColor="@color/whitesmoke"
            android:textStyle="bold"/>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nombre"
                android:textSize="15dp"
                android:textColor="@color/darkcyan"
                android:textStyle="bold"
                android:layout_weight="3"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_nombre"
                android:textColorHint="@color/gray"
                android:textSize="15dp"
                android:textColor="@color/whitesmoke"
                android:inputType="textPersonName"
                android:id="@+id/eNombre"/>


        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/correo"
                android:textSize="15dp"
                android:textColor="@color/darkcyan"
                android:textStyle="bold"
                android:layout_weight="3"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_correo"
                android:textColorHint="@color/gray"
                android:textSize="15dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/whitesmoke"
                android:id="@+id/eCorreo"/>

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/telefono"
                android:textSize="15dp"
                android:textColor="@color/darkcyan"
                android:textStyle="bold"
                android:layout_weight="3"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_telefono"
                android:textColorHint="@color/gray"
                android:textSize="15dp"
                android:inputType="phone"
                android:textColor="@color/whitesmoke"
                android:id="@+id/eTel"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="3"
                android:text="@string/gender"
                android:textSize="15dp"
                android:textColor="@color/darkcyan"
                android:textStyle="bold"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_weight="1">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/female"
                    android:textSize="15dp"
                    android:textColor="@color/lightblue"
                    android:checked="true"
                    android:id="@+id/cFemale"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/male"
                    android:textSize="15dp"
                    android:textColor="@color/lightblue"
                    android:id="@+id/cMale"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="3"
                android:text="@string/city"
                android:textSize="15dp"
                android:textColor="@color/darkcyan"
                android:textStyle="bold"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/whitesmoke"
                android:gravity="center"
                android:id="@+id/spinner">

            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="3"
                android:text="@string/hobbies"
                android:textSize="15dp"
                android:textColor="@color/darkcyan"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hobby1"
                        android:textSize="15dp"
                        android:textColor="@color/lightblue"
                        android:id="@+id/cHobby1"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hobby2"
                        android:textSize="15dp"
                        android:textColor="@color/lightblue"
                        android:id="@+id/cHobby2"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hobby3"
                        android:textSize="15dp"
                        android:textColor="@color/lightblue"
                        android:id="@+id/cHobby3"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hobby4"
                        android:textSize="15dp"
                        android:textColor="@color/lightblue"
                        android:id="@+id/cHobby4"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="3"
                android:text="@string/birthday"
                android:textSize="15dp"
                android:textColor="@color/darkcyan"
                android:textStyle="bold"/>

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/whitesmoke"
                android:layout_gravity="center"
                android:id="@+id/dBirthday"
                android:scrollbarSize="100dp">

            </DatePicker>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button"
            android:textStyle="bold"
            android:background="@color/darkcyan"
            android:layout_gravity="center"
            android:textColor="@color/whitesmoke"
            android:id="@+id/button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="15dp"
            android:textColor="@color/darkcyan"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15dp"
            android:textColor="@color/whitesmoke"
            android:id="@+id/tNombre"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textSize="15dp"
            android:textColor="@color/darkcyan"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15dp"
            android:textColor="@color/whitesmoke"
            android:id="@+id/tCorreo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textSize="15dp"
            android:textColor="@color/darkcyan"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15dp"
            android:textColor="@color/whitesmoke"
            android:id="@+id/tTel"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="15dp"
            android:textColor="@color/darkcyan"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15dp"
            android:textColor="@color/whitesmoke"
            android:id="@+id/tGender"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textSize="15dp"
            android:textColor="@color/darkcyan"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15dp"
            android:textColor="@color/whitesmoke"
            android:id="@+id/tCity"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobbies"
            android:textSize="15dp"
            android:textColor="@color/darkcyan"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15dp"
            android:textColor="@color/whitesmoke"
            android:id="@+id/tHobbies"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:textSize="15dp"
            android:textColor="@color/darkcyan"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15dp"
            android:textColor="@color/whitesmoke"
            android:id="@+id/tBirthday"/>

    </LinearLayout>

</ScrollView>